--- a/04.Crawling/04_식신.ipynb
+++ b/04.Crawling/04_식신.ipynb
@@ -279,6 +279,284 @@
    ]
   },
   {
+   "source": [
+    "### 사진을 클릭하여 레스토랑 페이지로 들어가서 크롤링"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=12, step=1)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rest_url = df.url[0]\n",
+    "url = base_url + rest_url\n",
+    "req = requests.get(url)\n",
+    "rest_soup = BeautifulSoup(req.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'053-954-8111'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "tel = rest_soup.select_one('.p_tel').find('p').get_text()\n",
+    "tel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'대구광역시 북구 대학로23길 12-1'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "addr = rest_soup.select_one('.txt_adr').get_text()\n",
+    "addr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tel_list, addr_list = [], []\n",
+    "for i in df.index:\n",
+    "    rest_url = df.url[i]\n",
+    "    url = base_url + rest_url\n",
+    "    req = requests.get(url)\n",
+    "    rest_soup = BeautifulSoup(req.text, 'html.parser')\n",
+    "\n",
+    "    tel = rest_soup.select_one('.p_tel').find('p').get_text()\n",
+    "    addr = rest_soup.select_one('.txt_adr').get_text()\n",
+    "\n",
+    "    tel_list.append(tel)\n",
+    "    addr_list.append(addr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "           url   평점          상호  \\\n",
+       "0    /P/268646  4.4     반짝반짝빛나는   \n",
+       "1    /P/268652  3.5       인도방랑기   \n",
+       "2    /P/268658  4.8        ZZIM   \n",
+       "3    /P/355593  3.7       홍대함바그   \n",
+       "4    /P/268665  3.0       밥하는남자   \n",
+       "5    /P/268649  3.0       포베트21   \n",
+       "6    /P/269346  평가중       봉봉해물탕   \n",
+       "7    /P/361407  4.3        72번가   \n",
+       "8    /P/455234  4.3  META PIZZA   \n",
+       "9   /P/1064049  평가중    모모야스시 참치   \n",
+       "10   /P/423163  평가중   1905몬스터피자   \n",
+       "11   /P/434493  평가중        반미리코   \n",
+       "\n",
+       "                                                   메뉴           전화번호  \\\n",
+       "0                                      단호박퓨레 타르트, 밀크티   053-954-8111   \n",
+       "1                                     탄두리치킨, 커리, 세트메뉴   053-956-9940   \n",
+       "2                                          한마리, 가든샐러드   053-941-7272   \n",
+       "3                            매콤함바그, 달콤함바그, 매콤갈비, 달콤갈비   053-269-5008   \n",
+       "4                              상하이누룽지, 통낙지라이스, 돈카츠샐러드  070-7584-1078   \n",
+       "5   양지 쇠고기 쌀국수, 세트(월남쌈+양지or해물쌀국수2개), 반세오, 월남쌈, 카오팟...   053-939-3688   \n",
+       "6                                          해물탕\\n, 해물찜   053-383-8000   \n",
+       "7                         준벅, 카우보이정식, 코스모 폴리탄, 프렌치 키스   053-939-0817   \n",
+       "8        미트디럭스피자, 쉬림프토파토 파스타, 로제, 프리마베라 피자, 쉬림프크림 파스타   053-939-6767   \n",
+       "9          모듬 스시 11P, 특스시 13P, 모모야스시 11P, 참치메뉴, 광어추가회   053-381-8999   \n",
+       "10  오리지날치즈 피자/페퍼로니 피자/베이컨체다 피자, 콤비네이션 피자/케이준치킨 피자/...   053-944-2520   \n",
+       "11          돼지고기/닭고기/어묵 반미, 소고기 치즈 반미, 쌀국수, 팟타이, 분보싸오  070-8278-1607   \n",
+       "\n",
+       "                       주소  \n",
+       "0    대구광역시 북구 대학로23길 12-1  \n",
+       "1         대구광역시 북구 대학로 81  \n",
+       "2            대구 북구 대학로 61  \n",
+       "3    대구광역시 북구 대학로23길 19-6  \n",
+       "4   대구광역시 북구 대학로23길 25-2   \n",
+       "5                          \n",
+       "6        대구 북구 유통단지로7길 21  \n",
+       "7                          \n",
+       "8   대구광역시 북구 대학로 103 지하1층  \n",
+       "9         대구광역시 북구 대불로 37  \n",
+       "10     대구광역시 북구 대학로15길 6   \n",
+       "11         대구 북구 대학로23길 7  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>url</th>\n      <th>평점</th>\n      <th>상호</th>\n      <th>메뉴</th>\n      <th>전화번호</th>\n      <th>주소</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>/P/268646</td>\n      <td>4.4</td>\n      <td>반짝반짝빛나는</td>\n      <td>단호박퓨레 타르트, 밀크티</td>\n      <td>053-954-8111</td>\n      <td>대구광역시 북구 대학로23길 12-1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>/P/268652</td>\n      <td>3.5</td>\n      <td>인도방랑기</td>\n      <td>탄두리치킨, 커리, 세트메뉴</td>\n      <td>053-956-9940</td>\n      <td>대구광역시 북구 대학로 81</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>/P/268658</td>\n      <td>4.8</td>\n      <td>ZZIM</td>\n      <td>한마리, 가든샐러드</td>\n      <td>053-941-7272</td>\n      <td>대구 북구 대학로 61</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>/P/355593</td>\n      <td>3.7</td>\n      <td>홍대함바그</td>\n      <td>매콤함바그, 달콤함바그, 매콤갈비, 달콤갈비</td>\n      <td>053-269-5008</td>\n      <td>대구광역시 북구 대학로23길 19-6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>/P/268665</td>\n      <td>3.0</td>\n      <td>밥하는남자</td>\n      <td>상하이누룽지, 통낙지라이스, 돈카츠샐러드</td>\n      <td>070-7584-1078</td>\n      <td>대구광역시 북구 대학로23길 25-2</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>/P/268649</td>\n      <td>3.0</td>\n      <td>포베트21</td>\n      <td>양지 쇠고기 쌀국수, 세트(월남쌈+양지or해물쌀국수2개), 반세오, 월남쌈, 카오팟...</td>\n      <td>053-939-3688</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>/P/269346</td>\n      <td>평가중</td>\n      <td>봉봉해물탕</td>\n      <td>해물탕\\n, 해물찜</td>\n      <td>053-383-8000</td>\n      <td>대구 북구 유통단지로7길 21</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>/P/361407</td>\n      <td>4.3</td>\n      <td>72번가</td>\n      <td>준벅, 카우보이정식, 코스모 폴리탄, 프렌치 키스</td>\n      <td>053-939-0817</td>\n      <td></td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>/P/455234</td>\n      <td>4.3</td>\n      <td>META PIZZA</td>\n      <td>미트디럭스피자, 쉬림프토파토 파스타, 로제, 프리마베라 피자, 쉬림프크림 파스타</td>\n      <td>053-939-6767</td>\n      <td>대구광역시 북구 대학로 103 지하1층</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>/P/1064049</td>\n      <td>평가중</td>\n      <td>모모야스시 참치</td>\n      <td>모듬 스시 11P, 특스시 13P, 모모야스시 11P, 참치메뉴, 광어추가회</td>\n      <td>053-381-8999</td>\n      <td>대구광역시 북구 대불로 37</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>/P/423163</td>\n      <td>평가중</td>\n      <td>1905몬스터피자</td>\n      <td>오리지날치즈 피자/페퍼로니 피자/베이컨체다 피자, 콤비네이션 피자/케이준치킨 피자/...</td>\n      <td>053-944-2520</td>\n      <td>대구광역시 북구 대학로15길 6</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>/P/434493</td>\n      <td>평가중</td>\n      <td>반미리코</td>\n      <td>돼지고기/닭고기/어묵 반미, 소고기 치즈 반미, 쌀국수, 팟타이, 분보싸오</td>\n      <td>070-8278-1607</td>\n      <td>대구 북구 대학로23길 7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 23
+    }
+   ],
+   "source": [
+    "df['전화번호'] = tel_list\n",
+    "df['주소'] = addr_list\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[<h4 data-reactid=\"161\">주소</h4>,\n",
+       " <p data-reactid=\"162\"><a class=\"txt_adr\" data-reactid=\"163\" href=\"#layer_store_big_map\">대구 북구 대학로23길 7</a><span data-reactid=\"164\"><!-- react-text: 165 -->(지번) <!-- /react-text --><!-- react-text: 166 -->대구광역시 북구 산격동 1321-5<!-- /react-text --></span><a class=\"btnTy1 btn_google_map\" data-reactid=\"167\" href=\"http://maps.google.com/maps?q=35.894658,128.611049\" target=\"_blank\">구글 지도로 보기</a></p>,\n",
+       " <a class=\"txt_adr\" data-reactid=\"163\" href=\"#layer_store_big_map\">대구 북구 대학로23길 7</a>,\n",
+       " <span data-reactid=\"164\"><!-- react-text: 165 -->(지번) <!-- /react-text --><!-- react-text: 166 -->대구광역시 북구 산격동 1321-5<!-- /react-text --></span>,\n",
+       " <a class=\"btnTy1 btn_google_map\" data-reactid=\"167\" href=\"http://maps.google.com/maps?q=35.894658,128.611049\" target=\"_blank\">구글 지도로 보기</a>]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "addr_div = rest_soup.select_one('.p_tel').next_sibling()\n",
+    "addr_div"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tel_list, addr_list = [], []\n",
+    "for i in df.index:\n",
+    "    rest_url = df.url[i]\n",
+    "    url = base_url + rest_url\n",
+    "    req = requests.get(url)\n",
+    "    rest_soup = BeautifulSoup(req.text, 'html.parser')\n",
+    "\n",
+    "    tel_div = rest_soup.select_one('.p_tel')\n",
+    "    tel = tel_div.find('p').get_text()\n",
+    "    addr = rest_soup.select_one('.txt_adr').get_text()\n",
+    "    if not addr:\n",
+    "        addr_div = tel_div.next_sibling()\n",
+    "        addr = addr_div[1].find('span').get_text()\n",
+    "        \n",
+    "    tel_list.append(tel)\n",
+    "    addr_list.append(addr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "           url   평점          상호  \\\n",
+       "0    /P/268646  4.4     반짝반짝빛나는   \n",
+       "1    /P/268652  3.5       인도방랑기   \n",
+       "2    /P/268658  4.8        ZZIM   \n",
+       "3    /P/355593  3.7       홍대함바그   \n",
+       "4    /P/268665  3.0       밥하는남자   \n",
+       "5    /P/268649  3.0       포베트21   \n",
+       "6    /P/269346  평가중       봉봉해물탕   \n",
+       "7    /P/361407  4.3        72번가   \n",
+       "8    /P/455234  4.3  META PIZZA   \n",
+       "9   /P/1064049  평가중    모모야스시 참치   \n",
+       "10   /P/423163  평가중   1905몬스터피자   \n",
+       "11   /P/434493  평가중        반미리코   \n",
+       "\n",
+       "                                                   메뉴           전화번호  \\\n",
+       "0                                      단호박퓨레 타르트, 밀크티   053-954-8111   \n",
+       "1                                     탄두리치킨, 커리, 세트메뉴   053-956-9940   \n",
+       "2                                          한마리, 가든샐러드   053-941-7272   \n",
+       "3                            매콤함바그, 달콤함바그, 매콤갈비, 달콤갈비   053-269-5008   \n",
+       "4                              상하이누룽지, 통낙지라이스, 돈카츠샐러드  070-7584-1078   \n",
+       "5   양지 쇠고기 쌀국수, 세트(월남쌈+양지or해물쌀국수2개), 반세오, 월남쌈, 카오팟...   053-939-3688   \n",
+       "6                                          해물탕\\n, 해물찜   053-383-8000   \n",
+       "7                         준벅, 카우보이정식, 코스모 폴리탄, 프렌치 키스   053-939-0817   \n",
+       "8        미트디럭스피자, 쉬림프토파토 파스타, 로제, 프리마베라 피자, 쉬림프크림 파스타   053-939-6767   \n",
+       "9          모듬 스시 11P, 특스시 13P, 모모야스시 11P, 참치메뉴, 광어추가회   053-381-8999   \n",
+       "10  오리지날치즈 피자/페퍼로니 피자/베이컨체다 피자, 콤비네이션 피자/케이준치킨 피자/...   053-944-2520   \n",
+       "11          돼지고기/닭고기/어묵 반미, 소고기 치즈 반미, 쌀국수, 팟타이, 분보싸오  070-8278-1607   \n",
+       "\n",
+       "                         주소  \n",
+       "0      대구광역시 북구 대학로23길 12-1  \n",
+       "1           대구광역시 북구 대학로 81  \n",
+       "2              대구 북구 대학로 61  \n",
+       "3      대구광역시 북구 대학로23길 19-6  \n",
+       "4     대구광역시 북구 대학로23길 25-2   \n",
+       "5   (지번) 대구시 북구 산격동 1416-49  \n",
+       "6          대구 북구 유통단지로7길 21  \n",
+       "7     (지번) 대구 북구 산격동 1393-1  \n",
+       "8     대구광역시 북구 대학로 103 지하1층  \n",
+       "9           대구광역시 북구 대불로 37  \n",
+       "10       대구광역시 북구 대학로15길 6   \n",
+       "11           대구 북구 대학로23길 7  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>url</th>\n      <th>평점</th>\n      <th>상호</th>\n      <th>메뉴</th>\n      <th>전화번호</th>\n      <th>주소</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>/P/268646</td>\n      <td>4.4</td>\n      <td>반짝반짝빛나는</td>\n      <td>단호박퓨레 타르트, 밀크티</td>\n      <td>053-954-8111</td>\n      <td>대구광역시 북구 대학로23길 12-1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>/P/268652</td>\n      <td>3.5</td>\n      <td>인도방랑기</td>\n      <td>탄두리치킨, 커리, 세트메뉴</td>\n      <td>053-956-9940</td>\n      <td>대구광역시 북구 대학로 81</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>/P/268658</td>\n      <td>4.8</td>\n      <td>ZZIM</td>\n      <td>한마리, 가든샐러드</td>\n      <td>053-941-7272</td>\n      <td>대구 북구 대학로 61</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>/P/355593</td>\n      <td>3.7</td>\n      <td>홍대함바그</td>\n      <td>매콤함바그, 달콤함바그, 매콤갈비, 달콤갈비</td>\n      <td>053-269-5008</td>\n      <td>대구광역시 북구 대학로23길 19-6</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>/P/268665</td>\n      <td>3.0</td>\n      <td>밥하는남자</td>\n      <td>상하이누룽지, 통낙지라이스, 돈카츠샐러드</td>\n      <td>070-7584-1078</td>\n      <td>대구광역시 북구 대학로23길 25-2</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>/P/268649</td>\n      <td>3.0</td>\n      <td>포베트21</td>\n      <td>양지 쇠고기 쌀국수, 세트(월남쌈+양지or해물쌀국수2개), 반세오, 월남쌈, 카오팟...</td>\n      <td>053-939-3688</td>\n      <td>(지번) 대구시 북구 산격동 1416-49</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>/P/269346</td>\n      <td>평가중</td>\n      <td>봉봉해물탕</td>\n      <td>해물탕\\n, 해물찜</td>\n      <td>053-383-8000</td>\n      <td>대구 북구 유통단지로7길 21</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>/P/361407</td>\n      <td>4.3</td>\n      <td>72번가</td>\n      <td>준벅, 카우보이정식, 코스모 폴리탄, 프렌치 키스</td>\n      <td>053-939-0817</td>\n      <td>(지번) 대구 북구 산격동 1393-1</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>/P/455234</td>\n      <td>4.3</td>\n      <td>META PIZZA</td>\n      <td>미트디럭스피자, 쉬림프토파토 파스타, 로제, 프리마베라 피자, 쉬림프크림 파스타</td>\n      <td>053-939-6767</td>\n      <td>대구광역시 북구 대학로 103 지하1층</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>/P/1064049</td>\n      <td>평가중</td>\n      <td>모모야스시 참치</td>\n      <td>모듬 스시 11P, 특스시 13P, 모모야스시 11P, 참치메뉴, 광어추가회</td>\n      <td>053-381-8999</td>\n      <td>대구광역시 북구 대불로 37</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>/P/423163</td>\n      <td>평가중</td>\n      <td>1905몬스터피자</td>\n      <td>오리지날치즈 피자/페퍼로니 피자/베이컨체다 피자, 콤비네이션 피자/케이준치킨 피자/...</td>\n      <td>053-944-2520</td>\n      <td>대구광역시 북구 대학로15길 6</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>/P/434493</td>\n      <td>평가중</td>\n      <td>반미리코</td>\n      <td>돼지고기/닭고기/어묵 반미, 소고기 치즈 반미, 쌀국수, 팟타이, 분보싸오</td>\n      <td>070-8278-1607</td>\n      <td>대구 북구 대학로23길 7</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 26
+    }
+   ],
+   "source": [
+    "del df['전화번호']\n",
+    "del df['주소']\n",
+    "df['전화번호'] = tel_list\n",
+    "df['주소'] = addr_list\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
